[gd_scene load_steps=6 format=3 uid="uid://ckojw71vuaufv"]

[ext_resource type="Script" uid="uid://ddwnasvk06tn6" path="res://test/scenarios/rope/test_tension.gd" id="1_3t4nn"]
[ext_resource type="Material" uid="uid://dambqa35y5wyi" path="res://assets/rope/mat_rope.tres" id="2_yys7x"]
[ext_resource type="CylinderMesh" uid="uid://30fvitnx1ugk" path="res://assets/rope/mesh_rope_full.tres" id="3_w471h"]

[sub_resource type="SimulatedRopeSettings" id="SimulatedRopeSettings_jljl7"]
render_mesh = ExtResource("3_w471h")
render_material = ExtResource("2_yys7x")

[sub_resource type="SimulatedRopeSettings" id="SimulatedRopeSettings_gwv5b"]
render_mesh = ExtResource("3_w471h")
render_material = ExtResource("2_yys7x")

[node name="TestTension" type="Node3D"]
script = ExtResource("1_3t4nn")

[node name="rope_loose" type="SimulatedRope" parent="." groups=["StagToolkit_SimulatedRope"]]
ideal_length = 5.0
settings = SubResource("SimulatedRopeSettings_jljl7")
process_physics_priority = 1

[node name="loose_left" type="SimulatedRopeBinding" parent="." node_paths=PackedStringArray("bind_to") groups=["StagToolkit_SimulatedRopeBinding"]]
bind_to = NodePath("../rope_loose")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="loose_right" type="SimulatedRopeBinding" parent="." node_paths=PackedStringArray("bind_to") groups=["StagToolkit_SimulatedRopeBinding"]]
bind_to = NodePath("../rope_loose")
bind_at = 1.0
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="rope_taut" type="SimulatedRope" parent="." groups=["StagToolkit_SimulatedRope"]]
ideal_length = 5.0
settings = SubResource("SimulatedRopeSettings_gwv5b")
process_physics_priority = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="taut_right" type="SimulatedRopeBinding" parent="." node_paths=PackedStringArray("bind_to") groups=["StagToolkit_SimulatedRopeBinding"]]
bind_to = NodePath("../rope_taut")
snap_tension_threshold = 2500.0
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 2)

[node name="taut_left" type="SimulatedRopeBinding" parent="." node_paths=PackedStringArray("bind_to") groups=["StagToolkit_SimulatedRopeBinding"]]
bind_to = NodePath("../rope_taut")
bind_at = 1.0
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 2)

[node name="settle_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="test_timeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="settle_timer" to="." method="_on_settle_timer_timeout"]
[connection signal="timeout" from="test_timeout" to="." method="_on_test_timeout_timeout"]
